Working escape detail ui improvement

--- a/components/food-event-list.css
+++ b/components/food-event-list.css
@@ -29,8 +29,9 @@
 
 .food-event-list-container .list-title {
   font-weight: 400;
-  font-size: 1.4em;
+  font-size: 1.6em;
   margin: 0;
+  color: black;
 }
 
 .food-event-list-container .mb8 {
