Ui suggestion done

--- a/components/parent-detail.css
+++ b/components/parent-detail.css
@@ -4,9 +4,10 @@
 }
 
 .parent-detail-title {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-weight: 400;
   letter-spacing: 0.0175rem;
+  color: black;
 }
 
 .parent-detail-sub-title {
