--- a/components/explore.css
+++ b/components/explore.css
@@ -1,5 +1,5 @@
 .explore-container {
-  background-image: url("https://img.traveltriangle.com/public-product/homepage_illustrations/hero_general.gif?tr=w-1000,h-800");
+  /* background-image: url("https://img.traveltriangle.com/public-product/homepage_illustrations/hero_general.gif?tr=w-1000,h-800"); */
   overflow: hidden;
   object-fit: cover;
   background-repeat: repeat space;
