--- a/components/signup.css
+++ b/components/signup.css
@@ -33,3 +33,11 @@
 .signup-container .br0 {
   border-radius: 0;
 }
+
+.signup-container .pointer {
+  cursor: pointer;
+}
+
+.signup-container .control.has-icons-right .icon {
+  pointer-events: auto;
+}
