--- a/components/enquiry.css
+++ b/components/enquiry.css
@@ -35,3 +35,43 @@
   margin-left: 10em;
   margin-right: 10em;
 }
+
+.enquiry-container .select:not(.is-multiple):not(.is-loading):hover::after {
+  color: #ff3860;
+}
+
+.enquiry-container .select:not(.is-multiple):not(.is-loading)::after {
+  border-color: #ff3860;
+}
+
+.enquiry-container .SingleDatePickerInput__withBorder {
+  width: 20em;
+  border-bottom: 2px solid #ff3860;
+}
+
+.enquiry-container .DateInput_input__focused {
+  border-bottom: 0px;
+}
+
+.enquiry-container .CalendarDay__selected,
+.CalendarDay__selected:active,
+.CalendarDay__selected:hover {
+  background: #ff3860;
+  border: 1px double #ff3860;
+  color: #fff;
+}
+
+.enquiry-container .DayPicker_weekHeader_ul {
+  margin-top: -2px;
+}
+
+.enquiry-container .DayPickerKeyboardShortcuts_show__bottomRight::before {
+  bottom: 0px;
+  right: 0px;
+  border-top: 26px solid transparent;
+  border-right: 33px solid #ff3860;
+}
+
+.enquiry-container .DateInput {
+  width: 16em;
+}
