Working explore api

--- a/components/explore.css
+++ b/components/explore.css
@@ -74,3 +74,43 @@
 .explore-container .button-next-disabled:hover {
   background-color: #e8c2c9;
 }
+
+.explore-container .select:not(.is-multiple):not(.is-loading):hover::after {
+  color: #ff3860;
+}
+
+.explore-container .select:not(.is-multiple):not(.is-loading)::after {
+  border-color: #ff3860;
+}
+
+.explore-container .SingleDatePickerInput__withBorder {
+  width: 20em;
+  border-bottom: 2px solid #ff3860;
+}
+
+.explore-container .DateInput_input__focused {
+  border-bottom: 0px;
+}
+
+.explore-container .CalendarDay__selected,
+.CalendarDay__selected:active,
+.CalendarDay__selected:hover {
+  background: #ff3860;
+  border: 1px double #ff3860;
+  color: #fff;
+}
+
+.explore-container .DayPicker_weekHeader_ul {
+  margin-top: -2px;
+}
+
+.explore-container .DayPickerKeyboardShortcuts_show__bottomRight::before {
+  bottom: 0px;
+  right: 0px;
+  border-top: 26px solid transparent;
+  border-right: 33px solid #ff3860;
+}
+
+.explore-container .DateInput {
+  width: 16em;
+}
