Barcelona away game jersey color

--- a/components/trending.css
+++ b/components/trending.css
@@ -104,7 +104,7 @@
   position: absolute;
   display: block;
   width: 225px;
-  background-color: #7fff00;
+  background-color: #ccff00;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   color: black;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
