--- a/components/city-model.css
+++ b/components/city-model.css
@@ -39,8 +39,8 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 80%;
-  border-radius: 50%;
+  /* width: 80%; */
+  /* border-radius: 50%; */
 }
 
 .city-model-container .pt0-5em {
@@ -78,4 +78,8 @@
 
 .city-model-container .spacer-is-2 {
   height: 2rem;
+}
+
+.city-model-container figure {
+  margin: 10px 10px 20px 10px;
 }
