--- a/components/food-offer-list.css
+++ b/components/food-offer-list.css
@@ -42,3 +42,7 @@
 .food-offer-list-container .lh1-7 {
   line-height: 1.7em;
 }
+
+.food-offer-list-container .letter-spacing-1px {
+  letter-spacing: 1px;
+}
