--- a/components/detail-cart.css
+++ b/components/detail-cart.css
@@ -214,3 +214,7 @@
   background-color: white;
   cursor: not-allowed;
 }
+
+.detail-cart-container .letter-spacing-1px {
+  letter-spacing: 1px;
+}
