--- a/components/header.css
+++ b/components/header.css
@@ -1,8 +1,3 @@
-/* .header-container {
-  z-index: 5 !important;
-  position: relative !important;
-} */
-
 .header-container .button {
   font-weight: 700;
   background-color: transparent;
@@ -46,12 +41,9 @@
   transition-duration: 172ms;
   will-change: transform;
   font-family: "Quicksand", sans-serif;
-  /* font-weight: 300; */
 }
 
 .header-container .brand-icon-header {
-  /* width: 56px;
-  height: 56px; */
   margin-right: 1rem;
   transition-duration: 172ms;
   will-change: width, height, margin-right;
@@ -66,7 +58,10 @@
   display: flex;
   -ms-flex-align: center;
   align-items: center;
-  /* line-height: 1; */
+}
+
+.header-container .letter-spacing-1px {
+  letter-spacing: 1px;
 }
 
 .message {
