--- a/components/parent-package.css
+++ b/components/parent-package.css
@@ -237,3 +237,7 @@
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
 }
+
+.parent-package-container .letter-spacing-1px {
+  letter-spacing: 1px;
+}
