All text spacing done

--- a/components/city-model.css
+++ b/components/city-model.css
@@ -83,3 +83,7 @@
 .city-model-container figure {
   margin: 10px 10px 20px 10px;
 }
+
+.city-model-container .letter-spacing-1px {
+  letter-spacing: 1px;
+}
