--- a/components/slidder-banner.css
+++ b/components/slidder-banner.css
@@ -12,3 +12,19 @@
 .slidder-banner-container {
   margin-bottom: 1em;
 }
+
+.slidder-banner figure {
+  margin: 0px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .slidder-banner-container .carousel {
+    height: 100px;
+    background-repeat: no-repeat;
+    background-size: auto;
+  }
+
+  .slidder-banner-container .slick-list {
+    height: 100px;
+  }
+}
