Bug fixing starting

--- a/components/food-list.css
+++ b/components/food-list.css
@@ -97,6 +97,10 @@
   font-size: 14px;
 }
 
+.food-list-container .f18 {
+  font-size: 18px;
+}
+
 .food-list-container .letter-spacing-1px {
   letter-spacing: 1px;
 }
